style.css
/* ... */
#sports:checked + span, #sports_sm:checked + span {
    background-color: #7e578f;
    color:#fff;
}

#change_view{
    background-color: grey;
    height: 4vh;
    width: 8vw;
    float: left;
    text-align:center;
    padding:0px 10px;
    display:block;
    height:100%;
    line-height: 5vh;
    padding-top: 5px;
}

#user_login{
    position: absolute;
    left: 75vw;
    top: 10px;
}

.about_btn{
    position: absolute;
    top: 2%;
    left: 15%;
}

h2.header_logo{
    color: #ffffff;
    font-size: 3.5rem;
    font-family: 'Gruppo', cursive;
    top:  -0.5vh;
    position: absolute;
    left: 50%;
    transform: translate(-50%,-50%);
    text-shadow: -1px 2px 2px rgba(150, 150, 150, 1);
}

.logo_container {
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.header_logo span {
    font-size: 3rem;
}

p.header_tagline{
    font-family: 'Gruppo', cursive;
    font-size: 1.5em;
}

.header_tagline {
    font-family: 'Quicksand', sans-serif;
    position: absolute;
    top: 36px;
    left: 50%;
    transform: translate(-50%,-50%);
}

.nav-wrapper {
    font-weight: lighter;
    font-family: 'Quicksand', sans-serif;
    background-color: #718792;
}

.switch {
    left: 68%;
    position: absolute;
}

.switch label {
    color: white;
    font-size: 1.2em;
}

nav {
    height: 64px;
}

#top_nav{
    left: 1%;
    width: 458px;
    height: 64px;
    position: absolute;
}

#spinner {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    transition: 0s;
    z-index: 1050;
}

img.logo {
    top:0;
    left:50%;
    transform: translate(-50%,0);
    width: 23vh;
    position: absolute;
    opacity: .5;
}

.section_label {
    margin: 2px 0;
    font-size: 1.5em;
}

.profile_pic_container{
    width: 5%;
    position: absolute;
    left: 80%;
    top: 0%;
    padding-right: 1%;
}

.profile_pic{
    width: 4vw;
}

.fixed-action-btn{
    top:1px;
}

.model-content{
   color:black
}

/*Preview*/
#full-screen {
    background-color: rgba(38, 50, 56, 0.8);
    width:100%;
    height:100%;
    position: fixed;
    left:0;
    top:0;
    z-index: 1000;
    display: none;
}

#preview{
    z-index: 1000;
    border-radius: 4px;
    font-family: 'Assistant', sans-serif;
    background-color: rgba(38, 50, 56, 0.8);
    width: 420px;
    height: 236px;
    position: fixed;
    bottom: 0;
    right: 0;
    color: white;
    -webkit-box-shadow: -2px 3px 2px 0 rgba(50, 50, 50, 0.75);
    -moz-box-shadow:    -2px 3px 2px 0 rgba(50, 50, 50, 0.75);
    box-shadow:         -2px 3px 2px 0 rgba(50, 50, 50, 0.75);
    display:none;
}

#preview-btn-container {
    position: absolute;
    left:0;
    top:0;
    display: inline-block;
    z-index: 2;
}

.embed-btn {
    display: block;
}

#close_preview, #open_full, #close_full, #add_watch,#share_btn{
   position: static;
}

#close_preview:hover {
    cursor: pointer;
    cursor: hand;
}

#viewers_p{
    position: absolute;
    top: 23%;
    left: 5%;
    cursor: default;
}

#click_thumbnail{
    position: absolute;
    top: 29%;
    left: 5%;
}

#category_p {
    position: absolute;
    top: 17%;
    left: 5%;
    cursor: default;
}

#sign_out{
    height: 50px;
    width: 240px;
}

.sign_out_button{
    display:block;
    background-color: rgba(167, 131, 104, 0.54);
}

.dropdown-button{
    background-color: #a7a3a3;
}

.dropdown-button:hover, .sign_out_button:hover{
    background-color: #4783b3;
}

.dropdown-content{
    background-color: rgba(90, 100, 103, .9);
}
.dropdown-content li:hover {
    background-color: #1d5773;
}

#update_btn {
    color:white;
    position: absolute;
    border-radius: 7px;
    top: -3px;
    /*left: 46px;*/
    background-color: #306b97;
    padding: 0 10px;
    font-weight: 400;
    width: 61px;
}
#update_btn_small{
    color:white;
    position: absolute;
    border-radius: 7px;
    top: -4px;
    left: 0;
    background-color: #306b97;
    padding: 0 10px;
    font-weight: 400;
    width: 36px;
}

.toasty {
    background-color: #306b97;
    color: white;
 }

#update_div, #update_div_sm {
    position: absolute;
    top: 50%;
    right: 20%;
    transform: translate(0,-50%);
    height: 50%;
    z-index: 2000;
}
#update_div_sm{
    right: 55%;
}

/************ Overall Stream Grid Containers ********************/
*{
    box-sizing: border-box;
}

div#main {
    width: 100vw;
    max-width:100%;
    overflow: hidden;
    margin: auto;
}

.fixed, .grid-f {
    width: 100%;
    #top:10%;
    #left: 0;
    display: block;
}

.medium, .grid {
    width: 100%;
    left: 0;
    display: block;
}

/*************Masonry Classes*************/

.grid-sizer-f,
.grid-item-f {
    float: left;
    width: 33.33%;
}

.grid-sizer,
.grid-item {
    float: left;
    width: 16.66%;
}

.grid-item-f--large{
    width: 33.33%;
}

.grid-item--medium {
    width: 16.66%;
}

.grid-item img, .grid-item-f img {
    width:100%;
}

/*************Isotope Classes*************/

.gaming {
    color:white;
    background-color:rgba(234, 93, 83, .8);
    position: relative;
    #border:2px solid rgba(234, 93, 83, 1);
}

.news {
    color:white;
    background-color: rgba(21,128,101,0.8);
    position: relative;
    #border:2px solid #158065;
}

.entertainment {
    color:white;
    background-color: rgba(14, 87, 195, 0.8);
    position: relative;
    #border:2px solid rgba(14, 87, 195, 0.92);
}

.misc {
    color:white;
    background-color:rgba(245, 196, 76, 0.8);
    position: relative;
    #border:2px solid rgba(245, 196, 76, 1);
}

.people {
    color:white;
    background-color:rgba(40, 180, 197,0.8);
    position: relative;
    #border:2px solid rgba(40, 180, 197,1);
}

.sports {
    color:white;
    background-color:rgba(126,87,143,0.8);
    position: relative;
    #border:2px solid #7e578f;
}

/****************************************/

.tooltipped:hover {
    color:white;
    border:none;
    cursor: pointer;
    cursor: hand;
}
/* ... */

